<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="buddy.example.bikebuddy.Main">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/batteryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/battery_life"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/config_pass"
            android:layout_width="1dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:foreground="@drawable/ic_motion_24dp"
            android:text="@string/config_pass" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25" />

    <TextView
        android:id="@+id/connectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bike_disconnected"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25" />

    <ToggleButton
        android:id="@+id/armButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#F44336"
        android:checked="false"
        android:drawableStart="@drawable/ic_lock_outline_black_32dp"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textOff="@string/activate_alarm"
        android:textOn="@string/deactivate_alarm"
        android:visibility="gone" />

    <TextView
        android:id="@+id/armedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_inactive"
        android:textAlignment="center"
        android:textSize="36sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="99dp"
        android:layout_height="79dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/ic_settings_black_24dp"
        android:minWidth="0dip"
        android:minHeight="0dip"
        android:textColorHint="#00FFFFFF" />

</LinearLayout>